<?xml version="1.0" encoding="utf-8"?>




<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.patcomp.instagramclient.RoundedImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:minWidth="50dp"
                android:id="@+id/IvProfilePic"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:minHeight="50dp"
                android:gravity="center_vertical"
                android:id="@+id/tvUsername"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/IvProfilePic"
                android:layout_toEndOf="@+id/IvProfilePic"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorBlueLikes" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timespan"
            android:id="@+id/tvTimeStamp"
            android:minHeight="50dp"
            android:gravity="center_vertical|right"
            android:maxLines="1"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp" />

    </LinearLayout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content" android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/IvPhoto"
        android:adjustViewBounds="true"
        android:minHeight="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitCenter"/>
        <VideoView
            android:id="@+id/video_view"
            android:layout_below="@+id/IvPhoto"
            android:layout_width="320px"
            android:layout_height="240px" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NumberofLikes"
        android:id="@+id/tvLikes"
        android:textColor="@color/colorBlueLikes"
        android:textIsSelectable="false"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Caption"
            android:id="@+id/tvCaption"
            android:layout_below="@+id/tvLikes"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewallcomments"
            android:id="@+id/tvAllComments"
            android:layout_below="@+id/tvCaption"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstcomment"
            android:id="@+id/tvComment1"
            android:layout_below="@+id/tvAllComments"
            android:layout_alignLeft="@+id/tvCaption"
            android:layout_alignStart="@+id/tvCaption"
            android:layout_marginTop="3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondcomment"
            android:id="@+id/tvComment2"
            android:layout_below="@+id/tvComment1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addcomment"
                android:id="@+id/tvAddComment"
                android:layout_below="@+id/tvComment2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>